--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,11 +1,17 @@
 <%- include("partials/header.ejs") %>
 
-<body class="body-about">
+<body>
   <!-- Top navbar -->
   <%- include("partials/navbar-top.ejs") %>
 
   <!-- Jumbotron containing group photo -->
-  <div class="jumbotron jumbotron-fluid py-0" id="jumbotron-about"></div>
+  <div class="jumbotron jumbotron-fluid py-0" id="jumbotron-about">
+
+    <!-- Unsplash credit to Arthur Edelman -->
+    <div class="container-fluid d-flex justify-content-end px-0">
+      <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@iamarthuredelman?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Arthur Edelman"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Arthur Edelman</span></a>
+    </div>
+  </div>
 
   <div class="container">
     <h1 class="display-4 text-center mb-5">About Us</h1>
@@ -13,9 +19,7 @@
     <div class="row align-items-start">
       <!-- Image of Coach Wagner -->
       <div class="col-md mb-4">
-        <!-- <img src="images/joe-wagner-about_medium.jpg" alt="Coach Wagner, chief of Hockeyrats" class="img-fluid shadow border border-info rounded-lg"> -->
-
-        <img src="images/joe-wagner-about-carmine-3x4_medium.jpg" alt="Coach Wagner, chief of Hockeyrats" class="img-fluid shadow border border-info rounded-lg">
+        <img src="images/joe-wagner-about-winter-3x4_medium.jpg" alt="Coach Wagner, chief of Hockeyrats" class="img-fluid shadow border border-info rounded-lg">
       </div>
 
       <!-- About page text -->
