--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,7 +14,7 @@
   </div>
 
   <div class="container">
-    <h1 class="display-4 text-center mb-5">About Us</h1>
+    <h1 class="display-4 text-center pt-2 mb-5">About Us</h1>
 
     <div class="row align-items-start">
       <!-- Image of Coach Wagner -->
