--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,7 +5,7 @@
   <%- include("partials/navbar-top.ejs") %>
 
   <!-- Contact Information -->
-  <div class="container my-2 justify-content-center">
+  <div class="container justify-content-center my-4">
     <h1 class="display-4 text-center mb-4">Contact</h1>
 
     <div class="container col-10 col-md-8 col-xl-7">
