--- a/views/lessons.ejs
+++ b/views/lessons.ejs
@@ -1,12 +1,21 @@
 <%- include("partials/header.ejs") %>
 
-<body>
+<body id="body-lessons">
   <!-- Top navbar -->
   <%- include("partials/navbar-top.ejs") %>
 
+  <!-- Jumbotron containing lessons video header -->
+  <div class="jumbotron jumbotron-fluid py-0 mb-0" id="jumbotron-lessons">
+    <video id="lessons-video" playsinline muted autoplay loop poster="images/lessons-poster.png" >
+      <source src="images/training_abridged_high.mp4" type="video/mp4">
+    </video>
+  </div>
+
   <!-- Lesson Information -->
   <div class="container text-center my-4">
-    <h1 class="display-4 mb-4">Private Lessons</h1>
+    <h1 class="display-4 mb-4">Lessons</h1>
+
+    <p class="lead">At Hockeyrats, we focus on fundamental skills that benefit modern hockey players.</p>
 
     <!-- Location -->
     <p>Lessons are held at <a href="http://www.ice-land.com/home" class="text-info" target="_blank" rel="noreferrer noopener">Ice Land</a> in Hamilton Township, NJ. Please <a href="/contact" class="text-info" target="_blank" rel="noreferrer noopener">contact me</a> if lessons at other rinks are desired.</p>
@@ -14,7 +23,7 @@
     <p class="text-danger">As of March 16, 2020, Ice Land will be closed due to the Coronavirus (COVID-19) pandemic.</p>
 
     <p class="text-danger">Please <a href="/contact" class="text-info" target="_blank" rel="noreferrer noopener">contact me</a> regarding lesson availability.</p>
-
+    
   </div>
 
 <%- include("partials/footer.ejs") %>
