Add McDavid video to media.ejs and adjust margin between videos

--- a/views/media.ejs
+++ b/views/media.ejs
@@ -11,19 +11,23 @@
     <p class="lead text-center mb-3"><a class="text-info" href="https://www.instagram.com/iceland6ammcdavid/" target="_blank" rel="noreferrer noopener"><i class="fab fa-instagram mr-2"></i>@iceland6ammcdavid</a></p>
 
     <div class="container justify-content-center row-cols-1 mb-5">
-      <div class="embed-responsive embed-responsive-16by9 col pb-2 mb-2">
+      <div class="embed-responsive embed-responsive-16by9 col mb-3">
+        <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/39VUNKXKZ28" allowfullscreen></iframe>
+      </div>
+
+      <div class="embed-responsive embed-responsive-16by9 col mb-3">
         <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/8cHhf2OIwjg" allowfullscreen></iframe>
       </div>
 
-      <div class="embed-responsive embed-responsive-16by9 col pb-2 mb-2">
+      <div class="embed-responsive embed-responsive-16by9 col mb-3">
         <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/9NRTSfLN4-M" allowfullscreen></iframe>
       </div>
 
-      <div class="embed-responsive embed-responsive-16by9 col pb-2 mb-2">
+      <div class="embed-responsive embed-responsive-16by9 col mb-3">
         <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/y43Aq8ANedY" allowfullscreen></iframe>
       </div>
 
-      <div class="embed-responsive embed-responsive-16by9 col pb-2 mb-2">
+      <div class="embed-responsive embed-responsive-16by9 col mb-3">
         <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/_pMB5RmMdl0" allowfullscreen></iframe>
       </div>
     </div>
