Change Media to media route in index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <h1 class="display-4 text-warning font-weight-bolder text-center pt-2 mt-2 pt-md-5 mt-md-5">Prove Them Wrong</h1>
 
   <div class="container d-flex justify-content-center" id="deke-div-index">
-    <a class="btn btn-warning btn-lg" href="/Media" role="button">Discover Dekes</a>
+    <a class="btn btn-warning btn-lg" href="/media" role="button">Discover Dekes</a>
   </div>
 
 <%- include("partials/footer.ejs") %>
