Write R.A.T.S. description and make lessons video height smaller

--- a/views/lessons.ejs
+++ b/views/lessons.ejs
@@ -12,17 +12,28 @@
   </div>
 
   <!-- Lesson Information -->
-  <div class="container text-center my-4">
-    <h1 class="display-4 mb-4">Lessons</h1>
+  <div class="container my-4">
+    <h1 class="display-4 text-center mb-5">Lessons</h1>
 
-    <p class="lead">At Hockeyrats, we focus on fundamental skills that benefit modern hockey players.</p>
+    <p class="pb-3">At Hockeyrats, we focus on fundamental drills that benefit modern hockey players. That's why we pioneered the <span class="text-danger">R.A.T.S.</span> Hockey Training System:</p>
+
+    <div class="container justify-content-center pb-3 mb-3">
+      <div class="col-4 offset-5 text-left">
+        <h3 class="mb-0"><span class="text-danger">R</span>ecognition</h3>
+        <h3 class="mb-0"><span class="text-danger">A</span>pplication</h3>
+        <h3 class="mb-0"><span class="text-danger">T</span>actics</h3>
+        <h3 class="mb-0"><span class="text-danger">S</span>kills</h3>
+      </div>
+    </div>
+
+    <p class="pb-3">We believe players from the Mini Mite to Senior levels can quickly improve by recognizing the key concept of each drill, applying the knowledge during game situations, combining ideas from multiple drills to form tactics, and expanding their toolbox of skills through continuous training.</p>
+
+    <p class="pb-3">To experience the R.A.T.S. Hockey Training System, please view our available lessons below.</p>
 
     <!-- Location -->
-    <p>Lessons are held at <a href="http://www.ice-land.com/home" class="text-info" target="_blank" rel="noreferrer noopener">Ice Land</a> in Hamilton Township, NJ. Please <a href="/contact" class="text-info" target="_blank" rel="noreferrer noopener">contact me</a> if lessons at other rinks are desired.</p>
+    <p class="pb-3">Lessons are held at <a href="http://www.ice-land.com/home" class="text-info" target="_blank" rel="noreferrer noopener">Ice Land</a> in Hamilton Township, NJ.</p>
 
-    <p class="text-danger">As of March 16, 2020, Ice Land will be closed due to the Coronavirus (COVID-19) pandemic.</p>
-
-    <p class="text-danger">Please <a href="/contact" class="text-info" target="_blank" rel="noreferrer noopener">contact me</a> regarding lesson availability.</p>
+    <p class="pb-3 text-danger">As of March 16, 2020, Ice Land will be closed due to the Coronavirus (COVID-19) pandemic. Please <a href="/contact" class="text-info" target="_blank" rel="noreferrer noopener">contact me</a> regarding lesson availability.</p>
     
   </div>
 
