--- a/views/lessons.ejs
+++ b/views/lessons.ejs
@@ -30,6 +30,9 @@
 
     <p class="pb-3">To experience the R.A.T.S. Hockey Training System, please view our available lessons below.</p>
 
+    <!-- Lessons Calendar -->
+    <%- include("partials/calendar.ejs") %>
+
     <!-- Location -->
     <p class="pb-3">Lessons are held at <a href="http://www.ice-land.com/home" class="text-info" target="_blank" rel="noreferrer noopener">Ice Land</a> in Hamilton Township, NJ.</p>
 
