--- a/views/partials/calendar.ejs
+++ b/views/partials/calendar.ejs
@@ -23,7 +23,7 @@
           <div class="card-body p-3 p-md-2">
             <!-- Date at top right corner -->
             <% if (!isThisMonth(date)) { %>
-            <p class="card-title font-weight-bold text-black-50 text-right">
+            <p class="card-title font-weight-light text-black-50 text-right">
             <% } else if (isToday(date)) { %>
             <p class="card-title font-weight-bold text-danger text-right">
             <% } else { %>
