--- a/views/partials/calendar.ejs
+++ b/views/partials/calendar.ejs
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-center align-items-center">
     <i class="fa fa-calendar fa-3x text-white mr-3"></i>
     <h1 class="display-4 my-4 text-white text-center">
-      <%= new Intl.DateTimeFormat('en-US', {year: 'numeric', month: 'long'}).format(new Date()) %>
+      <%= new Intl.DateTimeFormat('en-US', {year: 'numeric', month: 'long'}).format(utcToZonedTime(new Date(), 'America/New_York')) %>
     </h1>
   </div>
 
@@ -17,7 +17,9 @@
   </div>
 
   <div class="row row-cols-1 seven-cols">
-    <% dates.forEach(date => { %>
+    <% dates.forEach(dateUTC => { %>
+      <% const date = utcToZonedTime(dateUTC, 'America/New_York'); %>
+
       <div class="col px-3 px-md-0 pb-3 pb-md-0">
         <div class="card h-100">
           <div class="card-body p-3 p-md-2">
