--- a/views/partials/calendar.ejs
+++ b/views/partials/calendar.ejs
@@ -54,7 +54,7 @@
               <button type="button" class="btn btn-outline-info btn-sm btn-block" disabled aria-disabled="true">6-7 AM</button>
               <% } %>
 
-              <button type="button" class="btn btn-outline-info btn-sm btn-block" disabled aria-disabled="true">7-8 AM</button>
+              <button type="button" class="btn btn-outline-info btn-sm btn-block add-to-cart" data-name="<%= format(date, 'Pp') %>" data-price="50.00">7-8 AM</button>
             </div>
           </div>
         </div>
