--- a/views/about.ejs
+++ b/views/about.ejs
@@ -18,12 +18,12 @@
 
     <div class="row align-items-start">
       <!-- Image of Coach Wagner -->
-      <div class="col-md mb-4">
+      <div class="col-lg mb-4">
         <img src="images/joe-wagner-about-winter-3x4_medium.jpg" alt="Coach Wagner, chief of Hockeyrats" class="img-fluid shadow border border-info rounded-lg">
       </div>
 
       <!-- About page text -->
-      <div class="col-md my-4">
+      <div class="col-lg my-4">
         <blockquote class="blockquote text-center pb-2">
           <p><strong>Hockey rat</strong>, <em>noun</em></p>
           <p>Someone whose life revolves around playing hockey.</p>
