--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,13 +10,13 @@
       <!-- Enclosing row so photo/text are responsive -->
       <div class="row">
         <!-- Profile photo (centered in allocated 4/12 space) -->
-        <div class="d-flex col-md-4 justify-content-center align-items-center">
+        <div class="d-flex col-lg-4 justify-content-center align-items-center">
           <!-- img-thumbnail for responsiveness -->
           <img src="images/joe-wagner-profile-800_medium.jpg" class="img-thumbnail" alt="Coach Joe Wagner">
         </div>
 
         <!-- Profile text -->
-        <div class="col-md-8">
+        <div class="col-lg-8">
           <p class="lead mt-3">
             Joe Wagner is a premier hockey instructor at <a href="http://www.ice-land.com/home" class="text-info" target="_blank" rel="noreferrer noopener">Ice Land</a> in Hamilton Township, NJ with over 20 years of experience.
           </p>
