--- a/views/partials/calendar.ejs
+++ b/views/partials/calendar.ejs
@@ -7,22 +7,22 @@
   </div>
 
   <div class="row seven-cols font-weight-bold text-white text-uppercase text-center mb-2">
-    <div class="col d-none d-md-table-cell">Sun</div>
-    <div class="col d-none d-md-table-cell">Mon</div>
-    <div class="col d-none d-md-table-cell">Tue</div>
-    <div class="col d-none d-md-table-cell">Wed</div>
-    <div class="col d-none d-md-table-cell">Thu</div>
-    <div class="col d-none d-md-table-cell">Fri</div>
-    <div class="col d-none d-md-table-cell">Sat</div>
+    <div class="col d-none d-lg-table-cell">Sun</div>
+    <div class="col d-none d-lg-table-cell">Mon</div>
+    <div class="col d-none d-lg-table-cell">Tue</div>
+    <div class="col d-none d-lg-table-cell">Wed</div>
+    <div class="col d-none d-lg-table-cell">Thu</div>
+    <div class="col d-none d-lg-table-cell">Fri</div>
+    <div class="col d-none d-lg-table-cell">Sat</div>
   </div>
 
   <div class="row row-cols-1 seven-cols">
     <% dates.forEach(dateUTC => { %>
       <% let date = utcToZonedTime(dateUTC, 'America/New_York'); %>
 
-      <div class="col px-3 px-md-0 pb-3 pb-md-0">
+      <div class="col px-3 px-lg-0 pb-3 pb-lg-0">
         <div class="card h-100">
-          <div class="card-body p-3 p-md-2">
+          <div class="card-body p-3 p-lg-2">
             <!-- Date at top right corner -->
             <% if (!isThisMonth(date)) { %>
             <p class="card-title font-weight-light text-black-50 text-right">
@@ -32,12 +32,12 @@
             <p class="card-title font-weight-bold text-right">
             <% } %>
               <!-- Display weekday, month, and day for smaller screens -->
-              <span class="d-inline d-md-none">
+              <span class="d-inline d-lg-none">
                 <%= new Intl.DateTimeFormat('en-US', {weekday: 'long', month: 'long', day: 'numeric'}).format(date) %>
               </span>
               
-              <!-- Only display day of month for screens sizes md and larger -->
-              <span class="d-none d-md-inline">
+              <!-- Only display day of month for screens sizes lg and larger -->
+              <span class="d-none d-lg-inline">
                 <%= date.getDate() %>
               </span>
             </p>
