--- a/views/partials/navbar-top.ejs
+++ b/views/partials/navbar-top.ejs
@@ -1,5 +1,5 @@
 <!-- Navbar at top of page: fixed-top to expand over content -->
-<nav class="navbar fixed-top navbar-expand-md navbar-dark" id="navbar-top">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark" id="navbar-top">
   <!-- Container to center navbar contents -->
   <div class="container">
     <!-- Puck logo Joe -->
@@ -30,41 +30,41 @@
       </ul>
 
       <!-- Toggler/hamburger dropdown divider between left and right side links -->
-      <div class="dropdown-divider d-block d-md-none"></div>
+      <div class="dropdown-divider d-block d-lg-none"></div>
 
       <!-- Navbar for cart -->
       <ul class="navbar-nav mr-1">
         <li class="nav-item">
           <a class="nav-link" data-toggle="modal" data-target="#cart">
-            <p class="d-inline d-md-none">View Cart</p>
-            <i class="fas fa-shopping-cart fa-lg d-none d-md-inline"></i>
+            <p class="d-inline d-lg-none">View Cart</p>
+            <i class="fas fa-shopping-cart fa-lg d-none d-lg-inline"></i>
             <span class="badge badge-light ml-1" id="cart-total-items"></span>
           </a>
         </li>
       </ul>
 
       <!-- Divider between cart and social media -->
-      <div class="dropdown-divider d-block d-md-none"></div>
+      <div class="dropdown-divider d-block d-lg-none"></div>
 
       <!-- Navbar right: External links (Facebook, Instagram, Twitter) -->
-      <!-- Text-only until md screen size then logo-only for larger screens -->
+      <!-- Text-only until lg screen size then logo-only for larger screens -->
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="https://www.facebook.com/icelandskating/" target="_blank" rel="noreferrer noopener">
-            <p class="d-inline d-md-none">Facebook</p>
-            <i class="fab fa-facebook-square fa-lg d-none d-md-inline"></i>
+            <p class="d-inline d-lg-none">Facebook</p>
+            <i class="fab fa-facebook-square fa-lg d-none d-lg-inline"></i>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://www.instagram.com/icelandskatingcenter/" target="_blank" rel="noreferrer noopener">
-            <p class="d-inline d-md-none">Instagram</p>
-            <i class="fab fa-instagram-square fa-lg d-none d-md-inline"></i>
+            <p class="d-inline d-lg-none">Instagram</p>
+            <i class="fab fa-instagram-square fa-lg d-none d-lg-inline"></i>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://twitter.com/icelandhamilton"  target="_blank" rel="noreferrer noopener">
-            <p class="d-inline d-md-none">Twitter</p>
-            <i class="fab fa-twitter-square fa-lg d-none d-md-inline"></i>
+            <p class="d-inline d-lg-none">Twitter</p>
+            <i class="fab fa-twitter-square fa-lg d-none d-lg-inline"></i>
           </a>
         </li>
       </ul>
