--- a/views/partials/calendar.ejs
+++ b/views/partials/calendar.ejs
@@ -17,9 +17,7 @@
   </div>
 
   <div class="row row-cols-1 seven-cols">
-    <% dates.forEach(dateUTC => { %>
-      <% let date = utcToZonedTime(dateUTC, 'America/New_York'); %>
-
+    <% dates.forEach(date => { %>
       <div class="col px-3 px-lg-0 pb-3 pb-lg-0">
         <div class="card h-100">
           <div class="card-body p-3 p-lg-2">
