Initial Stripe integration
- Added order route to app.js
- Updated package.json to use latest versions (especially Stripe)
- Integrated Stripe Checkout Session creation in cart.js
- Removed form from cart.ejs
- Fixed href relative to root in ejs partials
- Added success.ejs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -50,10 +50,10 @@
   <script src="https://kit.fontawesome.com/7906468088.js" crossorigin="anonymous"></script>
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="/stylesheets/style.css">
 
   <!-- Favicon accompanying title -->
-  <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon">
 
   <title>Hockeyrats</title>
 
