--- a/views/partials/cart.ejs
+++ b/views/partials/cart.ejs
@@ -16,16 +16,18 @@
             
           </tbody>
         </table>
-        
+
         <div class="row justify-content-between">
           <a href="#" class="col-auto text-black-50" id="clear-cart">Clear Cart</a>
           <p class="col-auto font-weight-bold mb-0" id="cart-total-price"></p>
         </div>
-        
+
+        <div class="d-block text-danger text-center" id="error-message"></div>
       </div>
 
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+
         <button type="button" class="btn btn-primary" id="order-btn">Order Now</button>
       </div>
 
