Add head coach detail to index.ejs and about.ejs

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -35,7 +35,7 @@
 
         <p class="pb-3">We believe in honing the fundamentals rather than practicing complex drills. We pioneered the <a href="/lessons" class="text-info" target="_blank" rel="noreferrer noopener">R.A.T.S. Hockey Training System</a> to guide players from the Mini Mite to Senior levels towards greatness.</p>
 
-        <p class="pb-3">Joe Wagner presides as the Chief Hockey Rat. He is a premier hockey instructor at <a href="http://www.ice-land.com/home" class="text-info" target="_blank" rel="noreferrer noopener">Ice Land</a> in Hamilton Township, NJ with over 20 years of experience.</p>
+        <p class="pb-3">Joe Wagner presides as the Chief Hockey Rat. He is a premier hockey instructor at <a href="http://www.ice-land.com/home" class="text-info" target="_blank" rel="noreferrer noopener">Ice Land</a> in Hamilton Township, NJ with over 20 years of experience and currently serves as the head coach of the <a href="https://www.mercerchiefs.com/page/show/5954387-u16-american-2020-2021-" class="text-info" target="_blank" rel="noreferrer noopener">2020-2021 Mercer Chiefs Midget U16 American AAA Team.</a></p>
 
       </div>
     </div>
