Change twitter link to mercer_chiefs in navbar-top.ejs

--- a/views/partials/navbar-top.ejs
+++ b/views/partials/navbar-top.ejs
@@ -62,7 +62,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://twitter.com/icelandhamilton"  target="_blank" rel="noreferrer noopener">
+          <a class="nav-link" href="https://twitter.com/mercer_chiefs" target="_blank" rel="noreferrer noopener">
             <p class="d-inline d-lg-none">Twitter</p>
             <i class="fab fa-twitter-square fa-lg d-none d-lg-inline"></i>
           </a>
