Add Sample Lessons videos to lessons.ejs

--- a/views/lessons.ejs
+++ b/views/lessons.ejs
@@ -38,6 +38,18 @@
 
     <p class="pb-3 text-danger">Ice Land has reopened since the start of the Coronavirus (COVID-19) pandemic. Please review their <a href="http://www.ice-land.com" class="text-info" target="_blank" rel="noreferrer noopener">procedures and protocols</a> to maintain a safe and healthy environment for everyone. There is an inherent risk of exposure to COVID-19 in any public place where people are present. BY PURCHASING LESSONS, YOU VOLUNTARILY ASSUME ALL RISKS RELATED TO EXPOSURE TO COVID-19. JOE WAGNER AND ICE LAND ARENA DISCLAIM ANY AND ALL LIABILITY RELATED THERETO.</p>
     
+    <h1 class="display-5 text-center my-4">Sample Lessons</h1>
+
+    <div class="container justify-content-center row-cols-1 mb-5">
+      <div class="embed-responsive embed-responsive-16by9 col mb-3">
+        <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/p78VOFA6_CU" allowfullscreen></iframe>
+      </div>
+
+      <div class="embed-responsive embed-responsive-16by9 col mb-3">
+        <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/l5PLL66Pw9s" allowfullscreen></iframe>
+      </div>
+    </div>
+
   </div>
 
 <%- include("partials/footer.ejs") %>
