Capitalize RATS of HockeyRATS in header.ejs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,13 +17,13 @@
 
   <!-- CMS/SEO -->
   <meta name="author" content="Jeffry Lew">
-  <meta name="description" content="Hockeyrats is home to fanatics who live to train and play hockey.">
+  <meta name="description" content="HockeyRATS is home to fanatics who live to train and play hockey.">
 
   <!-- Facebook card -->
-  <meta property="og:site_name" content="Hockeyrats">
+  <meta property="og:site_name" content="HockeyRATS">
   <meta property="og:url" content="http://www.hockeyrats.com/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Hockeyrats">
+  <meta property="og:title" content="HockeyRATS">
   <meta property="og:description" content="The home of fanatics who live to train and play hockey. Pioneer of the R.A.T.S. training system.">
   <meta property="og:image" content="https://github.com/jeffrylew/joe_wagner-hockey/blob/master/media/seong-stick-flex_fb-event_medium.jpg?raw=true">
   <meta property="og:image:width" content="3857">
@@ -34,7 +34,7 @@
 
   <!-- Twitter card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Hockeyrats">
+  <meta name="twitter:title" content="HockeyRATS">
   <meta name="twitter:description" content="The home of fanatics who live to train and play hockey. Pioneer of the R.A.T.S. training system.">
   <meta name="twitter:image" content="https://github.com/jeffrylew/joe_wagner-hockey/blob/master/media/seong-stick-flex_twtr_medium.jpg?raw=true">
   <meta name="twitter:image:alt" content="Hockey rat flexing a Bauer Nexus ADV hockey stick.">
@@ -55,6 +55,6 @@
   <!-- Favicon accompanying title -->
   <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon">
 
-  <title>Hockeyrats</title>
+  <title>HockeyRATS</title>
 
 </head>
