--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,10 +5,10 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
   <!-- Stripe -->
-  <script src="https://js.stripe.com/v3/"></script>
+  <!-- <script src="https://js.stripe.com/v3/"></script> -->
 
   <!-- Script for cart -->
-  <script src="/javascripts/cart.js" defer></script>
+  <!-- <script src="/javascripts/cart.js" defer></script> -->
   
 </body>
 </html>
