Comment out cart and social media links in navbar-top.ejs

--- a/views/partials/navbar-top.ejs
+++ b/views/partials/navbar-top.ejs
@@ -30,10 +30,10 @@
       </ul>
 
       <!-- Toggler/hamburger dropdown divider between left and right side links -->
-      <div class="dropdown-divider d-block d-lg-none"></div>
+      <!-- <div class="dropdown-divider d-block d-lg-none"></div> -->
 
       <!-- Navbar for cart -->
-      <ul class="navbar-nav mr-1">
+      <!-- <ul class="navbar-nav mr-1">
         <li class="nav-item">
           <a class="nav-link" data-toggle="modal" data-target="#cart">
             <p class="d-inline d-lg-none">View Cart</p>
@@ -41,14 +41,14 @@
             <span class="badge badge-light ml-1" id="cart-total-items"></span>
           </a>
         </li>
-      </ul>
+      </ul> -->
 
       <!-- Divider between cart and social media -->
-      <div class="dropdown-divider d-block d-lg-none"></div>
+      <!-- <div class="dropdown-divider d-block d-lg-none"></div> -->
 
       <!-- Navbar right: External links (Facebook, Instagram, Twitter) -->
       <!-- Text-only until lg screen size then logo-only for larger screens -->
-      <ul class="navbar-nav">
+      <!-- <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="https://www.facebook.com/icelandskating/" target="_blank" rel="noreferrer noopener">
             <p class="d-inline d-lg-none">Facebook</p>
@@ -67,16 +67,16 @@
             <i class="fab fa-twitter-square fa-lg d-none d-lg-inline"></i>
           </a>
         </li>
-      </ul>
+      </ul> -->
 
     </div>
   </div>
 </nav>
 
 <!-- Alert when adding to cart for smaller screens -->
-<div class="alert alert-fixed alert-success fade show rounded-0 d-none d-lg-none" role="alert">
+<!-- <div class="alert alert-fixed alert-success fade show rounded-0 d-none d-lg-none" role="alert">
   Added <span id="cart-item-name"></span> to <a href="#" class="text-primary" data-toggle="modal" data-target="#cart">cart.</a>
-</div>
+</div> -->
 
 <!-- Include modal for cart -->
-<%- include("cart.ejs") %>
+<!-- <%- include("cart.ejs") %> -->
