Copy first two paragraphs of Lessons page to about.ejs

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -19,21 +19,32 @@
     <div class="row align-items-start">
       <!-- Image of Coach Wagner -->
       <div class="col-lg mb-4">
-        <img src="images/joe-wagner-about-winter-3x4_medium.jpg" alt="Coach Wagner, chief of Hockeyrats" class="img-fluid shadow border border-info rounded-lg">
+        <img src="images/joe-wagner-about-winter-3x4_medium.jpg" alt="Coach Wagner, chief of HockeyRATS" class="img-fluid shadow border border-info rounded-lg">
       </div>
 
       <!-- About page text -->
       <div class="col-lg my-4">
         <blockquote class="blockquote text-center pb-2">
           <p><strong>Hockey rat</strong>, <em>noun</em></p>
-          <p>Someone whose life revolves around playing hockey.</p>
+          <p>A hockey player.</p>
         </blockquote>
 
         <hr class="border-top border-light pb-3">
 
-        <p class="pb-3">Hockeyrats is home to players who are fanatical about improving their game. We know the early morning grind leads to late-night victories.</p>
+        <p class="pb-3">HockeyRATS is home to players who are fanatical about improving their game. We know the early morning grind leads to late-night victories.</p>
 
-        <p class="pb-3">We believe in honing the fundamentals rather than practicing complex drills. We pioneered the <a href="/lessons" class="text-info" target="_blank" rel="noreferrer noopener">R.A.T.S. Hockey Training System</a> to guide players from the Mini Mite to Senior levels towards greatness.</p>
+        <p class="pb-3">We focus on fundamental drills that benefit modern hockey players. That's why we pioneered the <span class="text-danger">R.A.T.S.</span> Hockey Training System:</p>
+
+        <div class="container justify-content-center pb-3 mb-3">
+          <div class="col-4 offset-5 text-left">
+            <h3 class="mb-0"><span class="text-danger">R</span>epetition</h3>
+            <h3 class="mb-0"><span class="text-danger">A</span>pplication</h3>
+            <h3 class="mb-0"><span class="text-danger">T</span>actics</h3>
+            <h3 class="mb-0"><span class="text-danger">S</span>kills</h3>
+          </div>
+        </div>
+
+        <p class="pb-3">We believe players from the Mini Mite to Senior levels can quickly improve by repeating fundamental drills to establish a strong base, applying the knowledge during game situations, combining ideas from multiple drills to form tactics, and expanding their toolbox of skills through continuous training.</p>
 
         <p class="pb-3">Joe Wagner presides as the Chief Hockey Rat. He is a premier hockey instructor at <a href="http://www.ice-land.com/home" class="text-info" target="_blank" rel="noreferrer noopener">Ice Land</a> in Hamilton Township, NJ with over 20 years of experience and currently serves as the head coach of the <a href="https://www.mercerchiefs.com/page/show/5954387-u16-american-2020-2021-" class="text-info" target="_blank" rel="noreferrer noopener">2020-2021 Mercer Chiefs Midget U16 American AAA Team.</a></p>
 
