--- a/views/lessons.ejs
+++ b/views/lessons.ejs
@@ -17,11 +17,11 @@
 
     <p class="pb-3">To experience the R.A.T.S. Hockey Training System, please view our available lessons below.</p>
 
+    <!-- Location -->
+    <p class="pb-3">Lessons are held at <a href="https://proskatenj.com/" class="text-info" target="_blank" rel="noreferrer noopener">ProSkate Ice Arena</a> in Monmouth Junction, NJ. Please <a href="/contact" class="text-info" target="_blank" rel="noreferrer noopener">contact me</a> regarding availability or if lessons at other facilities are desired.</p>
+
     <!-- Lessons Calendar -->
     <%- include("partials/calendar.ejs") %>
-
-    <!-- Location -->
-    <p class="pb-3">Lessons are held at <a href="http://www.ice-land.com/home" class="text-info" target="_blank" rel="noreferrer noopener">Ice Land</a> in Hamilton Township, NJ. Please <a href="/contact" class="text-info" target="_blank" rel="noreferrer noopener">contact me</a> regarding availability or if lessons at other facilities are desired.</p>
 
     <p class="pb-3 text-danger">Ice Land has reopened since the start of the Coronavirus (COVID-19) pandemic. Please review their <a href="http://www.ice-land.com" class="text-info" target="_blank" rel="noreferrer noopener">procedures and protocols</a> to maintain a safe and healthy environment for everyone. There is an inherent risk of exposure to COVID-19 in any public place where people are present. BY PURCHASING LESSONS, YOU VOLUNTARILY ASSUME ALL RISKS RELATED TO EXPOSURE TO COVID-19. JOE WAGNER AND ICE LAND ARENA DISCLAIM ANY AND ALL LIABILITY RELATED THERETO.</p>
     
