--- a/views/lessons.ejs
+++ b/views/lessons.ejs
@@ -22,9 +22,10 @@
 
     <!-- Lessons Calendar -->
     <%- include("partials/calendar.ejs") %>
-
-    <p class="pb-3 text-danger">Ice Land has reopened since the start of the Coronavirus (COVID-19) pandemic. Please review their <a href="http://www.ice-land.com" class="text-info" target="_blank" rel="noreferrer noopener">procedures and protocols</a> to maintain a safe and healthy environment for everyone. There is an inherent risk of exposure to COVID-19 in any public place where people are present. BY PURCHASING LESSONS, YOU VOLUNTARILY ASSUME ALL RISKS RELATED TO EXPOSURE TO COVID-19. JOE WAGNER AND ICE LAND ARENA DISCLAIM ANY AND ALL LIABILITY RELATED THERETO.</p>
     
+    <!-- COVID Waiver -->
+    <p class="pb-3 text-danger">ProSkate Ice Arena requires rink participants to sign a <a href="https://app.mysportsort.com/view/index.php?an=343&myss_source=register&entitytype=0&entityid=16669" class="text-info" target="_blank" rel="noreferrer noopener">COVID waiver</a>. There is an inherent risk of exposure to COVID-19 in any public place where people are present. BY PURCHASING LESSONS, YOU VOLUNTARILY ASSUME ALL RISKS RELATED TO EXPOSURE TO COVID-19. JOE WAGNER AND PROSKATE ICE ARENA DISCLAIM ANY AND ALL LIABILITY RELATED THERETO.</p>
+
     <h1 class="display-5 text-center my-4">Sample Lessons</h1>
 
     <div class="container justify-content-center row-cols-1 mb-5">
