Update email in contact.ejs

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -15,7 +15,7 @@
           Call/Text <a class="text-info" href="tel:+19088120636">(908) 812-0636</a>
         </li>
         <li>
-          <a class="text-info" href="mailto:josephwagner74@yahoo.com">josephwagner74@yahoo.com</a>
+          <a class="text-info" href="mailto:joe@hockeyrats.com">joe@hockeyrats.com</a>
         </li>
       </ul>
 
